Bug 160945 - LibreOffice crashes in vtableCall at startup (Windows ARM)
Summary: LibreOffice crashes in vtableCall at startup (Windows ARM)
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.4.7.2 release
Hardware: ARM Windows (All)
: medium critical
Assignee: Stephan Bergmann
URL:
Whiteboard: target:25.2.0 target:24.8.2 target:24...
Keywords: haveBacktrace
: 155865 162570 162605 (view as bug list)
Depends on:
Blocks: File-Opening Crash
  Show dependency treegraph
 
Reported: 2024-05-06 04:35 UTC by ff-mickael_jackson
Modified: 2025-09-19 09:09 UTC (History)
7 users (show)

See Also:
Crash report or crash signature: ["vtableCall"]


Attachments
crash report (15.64 KB, image/png)
2024-05-07 06:06 UTC, ff-mickael_jackson
Details
winDBG exception analysis (10.89 KB, text/plain)
2024-05-08 11:32 UTC, ff-mickael_jackson
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ff-mickael_jackson 2024-05-06 04:35:21 UTC
I'm on Windows 11.
LibreOffice launches and 1 second after displaying the main window, it crashes.
No errors are displayed.
Comment 1 Julien Nabet 2024-05-06 07:27:37 UTC
Could you try https://wiki.documentfoundation.org/QA/FirstSteps ?
Comment 2 MarRol777 2024-05-06 08:30:51 UTC
Please download and update to the latest stable version:
https://ftp.fau.de/tdf/libreoffice/stable/24.2.3/win/aarch64/

And please delete the following directories before the next start of LibreOffice:
%APPDATA%\LibreOffice
or/and
%APPDATA%\LibreOfficeDev
Comment 3 ff-mickael_jackson 2024-05-07 06:06:52 UTC
Created attachment 194009 [details]
crash report
Comment 4 ff-mickael_jackson 2024-05-07 06:09:53 UTC
Thanks. My Windows 11 is up-to-date with all the current drivers. 

Ok, now here are the problems with the version you linked to (after deleting the folders as requested):
- Launching it without opening a file: then if I open a file, it lags a lot and crashes unexpectedly in the middle of working on the file.
- Launching it by opening a file: it crashes (see attachment).
Comment 5 ff-mickael_jackson 2024-05-07 06:13:48 UTC
(In reply to ff-mickael_jackson from comment #3)
> Created attachment 194009 [details]
> crash report

and the link to the crash report itself: https://crashreport.libreoffice.org/stats/crash_details/48497b5d-8982-4459-989e-337734989814
Comment 6 Julien Nabet 2024-05-07 09:10:58 UTC
Thank you for the feedback.

Stephan: thought you might be interested in this one. BT shows interesting parts in UNO and bridges.
Comment 7 Stephan Bergmann 2024-05-07 16:22:31 UTC
(In reply to ff-mickael_jackson from comment #5)
> https://crashreport.libreoffice.org/stats/crash_details/48497b5d-8982-4459-
> 989e-337734989814

...has

> 0 	msca_uno.dll 	vtableCall 	bridges/source/cpp_uno/msvc_win32_arm64/cpp2uno.cxx:290
> 1 	msca_uno.dll 	vtableCall 	bridges/source/cpp_uno/msvc_win32_arm64/cpp2uno.cxx:255
> 2 	msca_uno.dll 	vtableSlotCall 	E:/r/workdir/AsmObject/bridges/source/cpp_uno/msvc_win32_arm64/vtableslotcall.asm:4106 

which suggests an issue in bridges/soruce/cpp_uno/msvc_win32_arm64/ that may well have been fixed recently (towards LO 24.8) with <https://git.libreoffice.org/core/+/ae6ee262d7649222a137f8722886a10db274ddf5%5E%21> "Some fixing of msvc_win32_arm64 UNO bridge" et al.

@ff-mickael_jackson, can you check whether a recent Windows ARM64 nightly build (see "Win-Arm64@tb77-TDF" at <https://dev-builds.libreoffice.org/daily/master/current.html>) fixes the issue?
Comment 8 ff-mickael_jackson 2024-05-07 18:45:49 UTC
(In reply to Stephan Bergmann from comment #7)
> @ff-mickael_jackson, can you check whether a recent Windows ARM64 nightly
> build (see "Win-Arm64@tb77-TDF" at
> <https://dev-builds.libreoffice.org/daily/master/current.html>) fixes the
> issue?

Well, it's worse...: it crashes even when launching the app without opening a file. And this time it doesn't display a crash report.
Comment 9 QA Administrators 2024-05-08 03:16:12 UTC Comment hidden (obsolete)
Comment 10 Stephan Bergmann 2024-05-08 06:28:55 UTC
(In reply to ff-mickael_jackson from comment #8)
> Well, it's worse...: it crashes even when launching the app without opening
> a file. And this time it doesn't display a crash report.

Can you see if starting LO in safe mode (<https://wiki.documentfoundation.org/UserProfile#Help_wizard_(LibreOffice_5.3_and_newer)>) helps?

(I'll try to reproduce this eventually, but may take a while until I come around to it.)
Comment 11 ff-mickael_jackson 2024-05-08 08:44:10 UTC
In Safe Mode, I can launch it (without opening a file). But as soon as I open a file, it crashes. No crash report.
Comment 12 Julien Nabet 2024-05-08 08:46:47 UTC
@ff-mickael_jackson: do you think it may be possible to retrieve a backtrace by using https://wiki.documentfoundation.org/QA/BugReport/Debug_Information#Windows:_How_to_get_a_backtrace ?
Comment 13 ff-mickael_jackson 2024-05-08 11:32:08 UTC
Created attachment 194025 [details]
winDBG exception analysis

I installed WinDBG via the Microsoft store since with your link, it installed the X64 version apparently.

Hope it helps.
Comment 14 Julien Nabet 2024-05-09 17:49:25 UTC
Thank you for the feedback. There's Python part in the bt but don't know what could be the pb.
Comment 15 Stephan Bergmann 2024-05-13 09:18:18 UTC
I cannot reproduce your issues.  But I know that `make PythonTest_sw_python` fails on Windows ARM64 in a way that suggests there is still some issue with the UNO bridges.  I haven't gotten to finding out what's going on there, yet, but it might be the same underlying issue.
Comment 16 stragu 2024-05-21 05:57:28 UTC
*** Bug 155865 has been marked as a duplicate of this bug. ***
Comment 17 stragu 2024-05-21 06:06:40 UTC
Confirmed via earlier duplicate bug 155865, with same signature on Windows ARM.
See also bug 153117.
Comment 18 Christian Lohmaier 2024-08-07 11:54:54 UTC
Hello world python macro works, so general uno-bridge seems to work now, but what fails is initializing the lightproof grammar checking

To reproduce:
 
###############
* build with --with-myspell-dicts to enable dictionaries
* launch writer
  + if using English/if the default document language is English you'll get a crash when loading writer (writing aids are initialized on launch)
  + if you use it e.g. in German, then setting the language of the document to English will trigger the crash
###############

(German doesn't have lightproof grammar rules, only plain dictionaries, so that's why it won't crash)
Other components like Calc or Impress won't crash immediately, but would crash if the spellchecking/grammar checking is actually triggered.

Workaround: disable Lightproof from Tools|Options → Language Settings → Writing aids

no difference whether it is a cross-compiled arm build or a native one.
Comment 19 Stephan Bergmann 2024-08-08 14:06:57 UTC
(In reply to Stephan Bergmann from comment #15)
> I cannot reproduce your issues.

...because, it turns out, I happened to not have --with-mypell-dicts configured
Comment 20 Commit Notification 2024-09-03 12:22:12 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f610a602c94925f2cae7765bae4a53816dd46aa5

tdf#160945: queryInterface must pass back indirect return value address in x0

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 Xisco Faulí 2024-09-03 12:27:47 UTC
*** Bug 162570 has been marked as a duplicate of this bug. ***
Comment 22 Xisco Faulí 2024-09-03 12:27:54 UTC
*** Bug 162605 has been marked as a duplicate of this bug. ***
Comment 23 Commit Notification 2024-09-04 08:52:22 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/0c8443c69a8e8c3c6da24748050d238ba3227b17

tdf#160945: queryInterface must pass back indirect return value address in x0

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 24 Commit Notification 2024-09-05 13:38:05 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-1":

https://git.libreoffice.org/core/commit/79ca1a3c7697a85ea272faad3861792f97da2b5e

tdf#160945: queryInterface must pass back indirect return value address in x0

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 25 Advaltepi66 2025-01-13 07:11:36 UTC
(In reply to Commit Notification from comment #24)
> Stephan Bergmann committed a patch related to this issue.
> It has been pushed to "libreoffice-24-8-1":
> 
> https://git.libreoffice.org/core/commit/
> 79ca1a3c7697a85ea272faad3861792f97da2b5e
> 
> tdf#160945: queryInterface must pass back indirect return value address in x0
> 
> It will be available in 24.8.1.
> 
> The patch should be included in the daily builds available at
> https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> https://wiki.documentfoundation.org/Testing_Daily_Builds https://blockblastonline.com
> 
> Affected users are encouraged to test the fix and report feedback.

I encourage everyone to test this patch and send feedback to help improve the quality of the product.
Comment 26 Dan 2025-01-18 22:19:07 UTC
I seem to have this issue for two days now. My system is Windows 10 Pro, not ARM, and the latest version. Three days ago, my system automatically updated to 24.8.4.2 without me asking it to. It has not worked since. I've uninstalled LibreOffice, gone back to the version before the update 3 days ago, and same problem. I downloaded and updated to the latest version, and still does not work. Every time I try (Writer or LibreOffice in safe mode), it generates the two errors referenced here: An informational error about and APPCRASH and a blantat application error pointing to CPPU3.dll.
Comment 27 Dan 2025-01-23 01:04:13 UTC
I've upgraded, uninstalled, reinstalled several versions of Libreoffice including 25.2.0.2 and still having troubles using Libreoffice. Sometimes I reboot in between uninstalling and installing, sometimes not. Occasionally, I get safe mode to run one time, never two times. The error is always cppu3.dll, exception code 5.

Again, it started after Libreoffice upgraded without me asking it to. I also noted that Chrome seemed to be updated and many of my settings were reset around the same time. Windows appeared to update something this morning.

All updates are applied, all graphic drivers are up to date. Everything else (except the wierdness with Chrome) is working as before.
Comment 28 Dan 2025-01-24 21:15:10 UTC
I've been searching and trying various fixes, none of which resolve this issue. One search was for this: Error 0xc0000005 while trying to start a specific application. It suggested administrator mode, so I tried it on LibreOffice itself and Writer. Nothing happened, including no new entries in the event log. As soon as I tried to run Writer in normal mode, I got another cppu3.dll failure in the event log. 

Still playing around, searching for options and something I haven't tried yet...
Comment 29 Dan 2025-02-04 17:49:48 UTC
For anyone that might stumble on this post, I fixed my problem today. Working with a fresh install of 25.2.0.3 which still crashed while trying to use it, I renamed the profile directory from user to user-old, ran LibreOffice normally, re-entered my user info, re-installed the Zotero extension and I am back in action...
Comment 30 Julien Nabet 2025-02-04 19:37:43 UTC
Thank you for the feedback, let's put this one to VERIFIED.
Comment 31 makto 2025-09-19 04:50:34 UTC Comment hidden (spam)
Comment 32 makto 2025-09-19 04:51:55 UTC Comment hidden (spam)