tdf#160945: queryInterface must pass back indirect return value address in x0

Change-Id: I28dacffbbcdf26ee453fd32aeb82166484612846
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172791
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <stephan.bergmann@allotropia.de>
(cherry picked from commit f610a602c94925f2cae7765bae4a53816dd46aa5)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172763
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>